--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <main class="container">
 
         <section class="productes">
-            <div onclick="fruta('pomelo', 2.5)">
+            <div onclick="fruta('pomelo', 2.5)" id="pomelo">
                 <img loading="lazy" class="imatges" src="img/aranja.png" alt="Aranja">
                 <p>Pomelo: 2,50 €/kg</p>
             </div>
 
-            <div onclick="fruta('kiwi', 4.20)"  id="kiwi">
+            <div onclick="fruta('kiwi', 4.2)"  id="kiwi">
                 <img loading="lazy" class="imatges" src="img/kiwi.png" alt="Kiwi">
                 <p>Kiwi : 4,20€/kg</p>
             </div>
@@ -67,7 +67,7 @@
                 <p>Plátanos: 3,20€/kg</p>
             </div>
             <div onclick="fruta('pera', 1.8)" id="pera">
-                <img loading="lazy" class="imatges" src="img/pera.jpg" alt="Pera" >
+                <img loading="lazy" class="imatges" src="img/pera.jpg" alt="Pera" value="" >
                 <p>Pera : 1,80€/kg</p>
             </div>
             <div onclick="fruta('Manzana Golden', 3.5)" id="manzana_golden">
@@ -83,9 +83,10 @@
                     <i class="fas fa-shopping-cart fa-sm"></i>  
                     Total Compra: 
                     <span id="preuFinal">0,00€</span>
-                </span></div>
+                </span>
+            </div>
 
-            <div id="carrito"></di>
+            <div id="carrito"></div>
             
 
         </section>
